--- a/fiddler_crabs.html
+++ b/fiddler_crabs.html
@@ -949,6 +949,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </div>
+<div class="cell">
+
+</div>
 
 </main>
 <!-- /main column -->
